--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 26
-  buildToolsVersion "27.0.2"
+  compileSdkVersion 33
+  buildToolsVersion "33.0.0"
   defaultConfig {
     applicationId "com.xiaopo.flying.photolayout"
-    minSdkVersion 14
-    targetSdkVersion 26
+    minSdkVersion 21
+    targetSdkVersion 31
     versionCode 1
     versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
   }
   buildTypes {
     release {
@@ -20,12 +20,13 @@ android {
 }
 
 dependencies {
-  compile fileTree(include: ['*.jar'], dir: 'libs')
-  androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
+  androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
-  compile 'com.android.support:appcompat-v7:26.1.0'
-  compile 'com.flying.xiaopo:poiphoto:0.4.2'
-  testCompile 'junit:junit:4.12'
-  compile project(':puzzle')
+  implementation 'androidx.appcompat:appcompat:1.6.1'
+  implementation 'com.google.android.material:material:1.9.0'
+  implementation 'com.flying.xiaopo:poiphoto:0.4.2'
+  androidTestImplementation 'junit:junit:4.12'
+//  implementation project(':puzzle')
 }
