--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
   <application
-      android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
+      android:allowBackup="true"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
 
     <provider
-        android:name="android.support.v4.content.FileProvider"
+        android:name="androidx.core.content.FileProvider"
         android:authorities="${applicationId}.provider"
         android:exported="false"
         android:grantUriPermissions="true">
@@ -22,7 +22,8 @@
           android:resource="@xml/provider_paths"/>
     </provider>
 
-    <activity android:name=".MainActivity">
+    <activity android:name=".MainActivity"
+        android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
